# cFE

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  apply_style.sh  setvars.sh
cfe/fsw/cfe-core/: CMakeLists.txt
fsw/cfe-core/: CMakeLists.txt  arch_build.cmake  mission_build.cmake  version_info.cmake
fsw/cfe-core/eds/: base_types.xml  ccsds_spacepacket.xml  cfe_es.xml  cfe_evs.xml  cfe_fs.xml  cfe_sb.xml  cfe_tbl.xml  cfe_time.xml  config.xml
fsw/cfe-core/unit-test/: CMakeLists.txt  HowToRunCFEUnitTests.txt  cFE_UT_Doxyfile  es_UT.c  es_UT.h  evs_UT.c  evs_UT.h  fs_UT.c  fs_UT.h  osprintf.h  osprintf_priv.h  sb_UT.c  sb_UT.h  tbl_UT.c  tbl_UT.h  time_UT.c  time_UT.h  ut_arinc653_stubs.c  ut_arinc653_stubs.h  ut_bsp_stubs.c  ut_configdata_stubs.c  ut_es_stubs.c  ut_evs_stubs.c  ut_fs_stubs.c  ut_fs_zipfile.h  ut_osapi_stubs.c  ut_osprintf_stubs.c  ut_osprintf_stubs.h  ut_sb_stubs.c  ut_stubs.c  ut_stubs.h  ut_support.c  ut_support.h  ut_tbl_stubs.c  ut_time_stubs.c
fsw/cfe-core/ut-stubs/: CMakeLists.txt  ut_es_stubs.c  ut_evs_stubs.c  ut_fs_stubs.c  ut_msg_stubs.c  ut_resourceid_stubs.c  ut_sb_stubs.c  ut_tbl_stubs.c  ut_time_stubs.c
fsw/libs/ccsds_msgformat/: CMakeLists.txt
fsw/libs/exthdr_msgformat/: CMakeLists.txt
modules/config/: CMakeLists.txt  config_ids_base.cmake  mission_build.cmake
modules/config/cmake/: cfe_config_ids.h.in  cfe_config_map.c.in  cfe_configid_nametable.c.in  cfe_configid_offset.h.in  cfe_platform_cfg.c.in  create_cfe_platform_cfg.cmake
modules/config/eds/: cfe.xml
modules/config/tool/: CMakeLists.txt  cfeconfig_platformdata_table.c  cfeconfig_platformdata_tool.c  cfeconfig_platformdata_tool.h  config_ids_dynamic.cmake
modules/config/ut-coverage/: CMakeLists.txt  test_cfe_config.c
modules/core_api/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/core_api/config/: default_cfe_core_api_base_msgid_values.h  default_cfe_core_api_base_msgids.h  default_cfe_core_api_interface_cfg.h  default_cfe_core_api_interface_cfg_values.h  default_cfe_core_api_msgid_mapping.h  default_cfe_mission_cfg.h  default_cfe_msgids.h  eds_cfe_core_api_base_msgid_values.h  eds_cfe_core_api_interface_cfg_values.h  eds_cfe_core_api_msgid_mapping.h
modules/core_api/eds/: base_types.xml  ccsds_spacepacket.xml  cfe_fs.xml  config.xml
modules/core_api/ut-stubs/: CMakeLists.txt
modules/core_private/: CMakeLists.txt  arch_build.cmake
modules/core_private/config/: default_cfe_core_private_internal_cfg.h  default_cfe_platform_cfg.h
modules/core_private/eds/: base_types.xml  config.xml
modules/core_private/ut-stubs/: CMakeLists.txt
modules/es/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/es/config/: default_cfe_es_extern_typedefs.h  default_cfe_es_fcncode_values.h  default_cfe_es_fcncodes.h  default_cfe_es_interface_cfg.h  default_cfe_es_interface_cfg_values.h  default_cfe_es_internal_cfg.h  default_cfe_es_internal_cfg_values.h  default_cfe_es_memaddress.h  default_cfe_es_mission_cfg.h  default_cfe_es_msg.h  default_cfe_es_msgdefs.h  default_cfe_es_msgid_values.h  default_cfe_es_msgids.h  default_cfe_es_msgstruct.h  default_cfe_es_platform_cfg.h  default_cfe_es_topicid_values.h  default_cfe_es_topicids.h  eds_cfe_es_extern_typedefs.h  eds_cfe_es_fcncode_values.h  eds_cfe_es_interface_cfg_values.h  eds_cfe_es_memaddress.h  eds_cfe_es_msgdefs.h  eds_cfe_es_msgstruct.h  eds_cfe_es_topicid_values.h
modules/es/eds/: cfe_es.xml
modules/es/ut-coverage/: CMakeLists.txt  es_UT.c  es_UT.h  es_UT_objtab.c  es_UT_static_module_list.c  es_ut_default_dispatch.c  es_ut_eds_dispatch.c  es_ut_helpers.c  es_ut_helpers.h
modules/evs/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/evs/config/: default_cfe_evs_extern_typedefs.h  default_cfe_evs_fcncode_values.h  default_cfe_evs_fcncodes.h  default_cfe_evs_interface_cfg.h  default_cfe_evs_interface_cfg_values.h  default_cfe_evs_internal_cfg.h  default_cfe_evs_internal_cfg_values.h  default_cfe_evs_mission_cfg.h  default_cfe_evs_msg.h  default_cfe_evs_msgdefs.h  default_cfe_evs_msgid_values.h  default_cfe_evs_msgids.h  default_cfe_evs_msgstruct.h  default_cfe_evs_platform_cfg.h  default_cfe_evs_topicid_values.h  default_cfe_evs_topicids.h  eds_cfe_evs_extern_typedefs.h  eds_cfe_evs_fcncode_values.h  eds_cfe_evs_interface_cfg_values.h  eds_cfe_evs_msgdefs.h  eds_cfe_evs_msgstruct.h  eds_cfe_evs_topicid_values.h
modules/evs/eds/: cfe_evs.xml
modules/evs/ut-coverage/: CMakeLists.txt  evs_UT.c  evs_UT.h  evs_ut_default_dispatch.c  evs_ut_eds_dispatch.c  evs_ut_helpers.c  evs_ut_helpers.h
modules/fs/: CMakeLists.txt  mission_build.cmake
modules/fs/config/: default_cfe_fs_extern_typedefs.h  default_cfe_fs_filedef.h  default_cfe_fs_interface_cfg.h  default_cfe_fs_interface_cfg_values.h  default_cfe_fs_mission_cfg.h  eds_cfe_fs_filedef.h
modules/fs/eds/: cfe_fs.xml
modules/fs/ut-coverage/: CMakeLists.txt  fs_UT.c  fs_UT.h
modules/msg/: CMakeLists.txt  mission_build.cmake
modules/msg/mission_inc/: default_cfe_msg_hdr_pri.h  default_cfe_msg_hdr_priext.h  default_cfe_msg_sechdr.h
modules/msg/option_inc/: default_cfe_msg_hdr_pri.h  default_cfe_msg_hdr_priext.h  default_cfe_msg_sechdr.h
modules/msg/private_inc/: cfe_msg_defaults.h  cfe_msg_priv.h
modules/msg/src/: cfe_msg_ccsdsext.c  cfe_msg_ccsdspri.c  cfe_msg_init.c  cfe_msg_initdefaulthdr_pri.c  cfe_msg_msgid_shared.c  cfe_msg_msgid_v1.c  cfe_msg_msgid_v2.c  cfe_msg_sechdr_checksum.c  cfe_msg_sechdr_fc.c  cfe_msg_sechdr_time.c  cfe_msg_sechdr_time_old.c
modules/msg/unit-test-coverage/: CMakeLists.txt  msg_UT.c  (+18 more)
modules/resourceid/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/sb/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/sbr/: CMakeLists.txt
modules/tbl/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
modules/time/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
tools/elf2cfetbl/: CMakeLists.txt  ELF_Structures.h  Makefile  README.txt  SampleTblImg.c  elf2cfetbl.c
(+2314 files in other folders)
